[package]
name = "prime-rs"
version = "0.1.0"
edition = "2021"
authors = ["Michael Bachmann <mbachmann@bbmsoft.net>"]
description = "Command line utilities for finding prime numbers"
readme = "README.md"
repository = "https://github.com/babymotte/shanksbot-rs.git"
license = "MIT"
keywords = ["prime", "numbers"]
categories = ["command-line-utilities", "mathematics"]

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
